tests/miniJava/neg/004326_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { System.out.println public int [] java ( ) { return 0 ; } }
